Working DMN testing example for Invoice Example.
