# examples/invoice/postmanOpenApi.yml
@@ -55,14 +55,24 @@ info:
     \ with `mvn spring-boot:run`.\n\nThen you can access the Camunda Webapps in your\
     \ browser: `http://localhost:8080/` (provide login/password \nfrom `application.yaml`,\
     \ default: demo/demo). The Rest API can be available through `http://localhost:8080/engine-rest`.\n\
-    \ \n\n\n<details>\n<summary><b>CHANGELOG</b></summary>\n<p>\n\n\n<h1 id=\"changelog\"\
-    \ class=\"section\">Changelog</h1>\n<p>All notable changes to this project will\
-    \ be documented in this file.</p>\n<ul>\n  <li>Types of Changes (L3):</li>\n</ul>\n\
-    <ul>\n  <li>Added: new features</li>\n</ul>\n<ul>\n  <li>Changed: changes in existing\
-    \ functionality</li>\n</ul>\n<ul>\n  <li>Deprecated: soon-to-be-removed features</li>\n\
-    </ul>\n<ul>\n  <li>Removed: now removed features</li>\n</ul>\n<ul>\n  <li>Fixed:\
-    \ any bug fixes</li>\n</ul>\n<ul>\n  <li>Security: in case of vulnerabilities</li>\n\
-    </ul>\n<p>The format is based on <a href=\"https://keepachangelog.com/en/1.0.0/\"\
+    \ \n\n\n.some **CHANGELOG**\n[%collapsible]\n====\n\n<h1 id=\"changelog\" class=\"\
+    section\">Changelog</h1>\n<p>All notable changes to this project will be documented\
+    \ in this file.</p>\n<ul>\n  <li>Types of Changes (L3):</li>\n</ul>\n<ul>\n  <li>Added:\
+    \ new features</li>\n</ul>\n<ul>\n  <li>Changed: changes in existing functionality</li>\n\
+    </ul>\n<ul>\n  <li>Deprecated: soon-to-be-removed features</li>\n</ul>\n<ul>\n\
+    \  <li>Removed: now removed features</li>\n</ul>\n<ul>\n  <li>Fixed: any bug fixes</li>\n\
+    </ul>\n<ul>\n  <li>Security: in case of vulnerabilities</li>\n</ul>\n<p>The format\
+    \ is based on <a href=\"https://keepachangelog.com/en/1.0.0/\">Keep a Changelog</a>,\n\
+    and this project adheres to <a href=\"https://semver.org/spec/v2.0.0.html\">Semantic\
+    \ Versioning</a>.</p>\n\n<h2 id=\"unreleased\" class=\"section\">Unreleased</h2>\n\
+    <p>Initial Version</p>\n====\n\n<details>\n<summary><b>CHANGELOG</b></summary>\n\
+    <p>\n\n\n<h1 id=\"changelog\" class=\"section\">Changelog</h1>\n<p>All notable\
+    \ changes to this project will be documented in this file.</p>\n<ul>\n  <li>Types\
+    \ of Changes (L3):</li>\n</ul>\n<ul>\n  <li>Added: new features</li>\n</ul>\n\
+    <ul>\n  <li>Changed: changes in existing functionality</li>\n</ul>\n<ul>\n  <li>Deprecated:\
+    \ soon-to-be-removed features</li>\n</ul>\n<ul>\n  <li>Removed: now removed features</li>\n\
+    </ul>\n<ul>\n  <li>Fixed: any bug fixes</li>\n</ul>\n<ul>\n  <li>Security: in\
+    \ case of vulnerabilities</li>\n</ul>\n<p>The format is based on <a href=\"https://keepachangelog.com/en/1.0.0/\"\
     >Keep a Changelog</a>,\nand this project adheres to <a href=\"https://semver.org/spec/v2.0.0.html\"\
     >Semantic Versioning</a>.</p>\n\n<h2 id=\"unreleased\" class=\"section\">Unreleased</h2>\n\
     <p>Initial Version</p>\n\n</p>\n</details>\n\n"
@@ -672,19 +682,19 @@ paths:
 
                       See the [Introduction](https://docs.camunda.org/manual/7.15/reference/rest/overview/#error-handling)
                       for the error response format.
-  /process-definition/key/{key}/start/--REMOVE%3AReviewInvoice--:
+  /process-definition/key/{key}/start/--REMOVE%3AReviewInvoiceProcess--:
     post:
       tags:
-      - ReviewInvoice
-      summary: 'ReviewInvoice: StartProcessInstance'
+      - ReviewInvoiceProcess
+      summary: 'ReviewInvoiceProcess: StartProcessInstance'
       description: "This starts the Review Invoice Process.\n\nUsage as _CallActivity_:\n\
-        ```\nlazy val ReviewInvoiceProcess =\n          callActivity(\"ReviewInvoice\"\
-        ) //TODO adjust to your CallActivity id!\n            .calledElement(\"ReviewInvoice\"\
+        ```\nlazy val ReviewInvoiceProcessProcess =\n          callActivity(\"ReviewInvoiceProcess\"\
+        ) //TODO adjust to your CallActivity id!\n            .calledElement(\"ReviewInvoiceProcess\"\
         )\n            .inSource(\"creditor\")\n            .inSource(\"amount\")\n\
         \            .inSource(\"invoiceCategory\")\n            .inSource(\"invoiceNumber\"\
         )\n            .inSource(\"invoiceDocument\")\n            .outSource(\"clarified\"\
         )\n```\n"
-      operationId: 'ReviewInvoice: StartProcessInstance'
+      operationId: 'ReviewInvoiceProcess: StartProcessInstance'
       parameters:
       - name: key
         in: path
@@ -692,7 +702,7 @@ paths:
         required: true
         schema:
           type: string
-          default: ReviewInvoice
+          default: ReviewInvoiceProcess
       requestBody:
         content:
           application/json:
@@ -790,7 +800,7 @@ paths:
   /task/--REMOVE%3AAssignReviewer--:
     post:
       tags:
-      - ReviewInvoice
+      - ReviewInvoiceProcess
       summary: 'AssignReviewer: GetActiveTask'
       description: Select the Reviewer.
       operationId: 'AssignReviewer: GetActiveTask'
@@ -827,7 +837,7 @@ paths:
   /task/{taskId}/form-variables/--REMOVE%3AAssignReviewer--:
     get:
       tags:
-      - ReviewInvoice
+      - ReviewInvoiceProcess
       summary: 'AssignReviewer: GetTaskFormVariables'
       description: Retrieves the form variables for a task.
 
@@ -914,7 +924,7 @@ paths:
   /task/{taskId}/complete/--REMOVE%3AAssignReviewer--:
     post:
       tags:
-      - ReviewInvoice
+      - ReviewInvoiceProcess
       summary: 'AssignReviewer: CompleteTask'
       description: Select the Reviewer.
       operationId: 'AssignReviewer: CompleteTask'
@@ -981,7 +991,7 @@ paths:
   /task/--REMOVE%3AReviewInvoice--:
     post:
       tags:
-      - ReviewInvoice
+      - ReviewInvoiceProcess
       summary: 'ReviewInvoice: GetActiveTask'
       description: Review Invoice and approve.
       operationId: 'ReviewInvoice: GetActiveTask'
@@ -1018,7 +1028,7 @@ paths:
   /task/{taskId}/form-variables/--REMOVE%3AReviewInvoice--:
     get:
       tags:
-      - ReviewInvoice
+      - ReviewInvoiceProcess
       summary: 'ReviewInvoice: GetTaskFormVariables'
       description: Retrieves the form variables for a task.
 
@@ -1105,7 +1115,7 @@ paths:
   /task/{taskId}/complete/--REMOVE%3AReviewInvoice--:
     post:
       tags:
-      - ReviewInvoice
+      - ReviewInvoiceProcess
       summary: 'ReviewInvoice: CompleteTask'
       description: Review Invoice and approve.
       operationId: 'ReviewInvoice: CompleteTask'
